--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tower = "0.5.2"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 chrono = { version = "0.4", features = ["serde"] }
+thiserror = "2.0"
