--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "2.0"
+uuid = { version = "1.11", features = ["v4"] }
+axum-extra = { version = "0.10", features = ["typed-header"] }
