--- a/fly.toml
+++ b/fly.toml
@@ -1,23 +1,20 @@
-# fly.toml app configuration file generated for splitwise-rust on 2025-12-17T10:58:17-08:00
-#
-# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
-#
-
-app = 'splitwise-rust'
+app = 'splitdumb'
 primary_region = 'lax'
 
 [build]
 
+[mounts]
+  source = "data"
+  destination = "/data"
+
 [http_service]
   internal_port = 80
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = false
   auto_start_machines = true
-  min_machines_running = 0
-  processes = ['app']
+  min_machines_running = 1
 
 [[vm]]
-  memory = '1gb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
