--- a/fly.toml
+++ b/fly.toml
@@ -1,20 +1,23 @@
+# fly.toml app configuration file generated for splitdumb on 2025-12-17T19:14:40Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
 app = 'splitdumb'
 primary_region = 'lax'
 
 [build]
 
-[mounts]
-  source = "data"
-  destination = "/data"
-
 [http_service]
   internal_port = 80
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-  memory = '256mb'
+  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
